umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_phenanthrene.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C2v
order: 4
equivalence_sets:
  - - C(0)
    - C(1)
  - - C(2)
    - C(3)
  - - C(4)
    - C(5)
  - - H(6)
    - H(7)
  - - C(8)
    - C(9)
  - - C(10)
    - C(11)
  - - C(12)
    - C(13)
  - - C(14)
    - C(15)
  - - H(16)
    - H(17)
  - - H(18)
    - H(19)
  - - H(20)
    - H(21)
  - - H(22)
    - H(23)
