umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_phosphoruspentafluoride.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D3h
order: 12
equivalence_sets:
  - - P(0)
  - - F(1)
    - F(2)
  - - F(3)
    - F(4)
    - F(5)
