umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_phosphorustrioxide.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: Td
order: 24
equivalence_sets:
  - - O(0)
    - O(1)
    - O(2)
    - O(3)
    - O(4)
    - O(5)
  - - P(6)
    - P(7)
    - P(8)
    - P(9)
