umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_squaric_acid_difluoride.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C2v
order: 4
equivalence_sets:
  - - C(0)
    - C(1)
  - - C(2)
    - C(3)
  - - F(4)
    - F(5)
  - - O(6)
    - O(7)
